--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,4 +24,8 @@ services:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
     volumes:
-      - ./s3-data:/data
+      - s3-data_volume:/data
+
+
+volumes:
+  s3-data_volume:
