--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 x-environment: &default-environment
   MINIO_ACCESS_KEY: 98TwrSi3bPDwF7kaFOmS
   MINIO_SECRET_KEY: AacSBHCVbNSZrsN9mxzury5dhqpMM8xQkjCJYpyK
+  MINIO_ENDPOINT_URL: "http://api_s3:9000"
 
 services:
   s3_worker:
